--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dogbot",
+  "homepage": "https://buresj.github.io/HiDoggie",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
