--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.3.3",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.2",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
     "gh-pages": "^2.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "react-simple-chatbot": "^0.6.1",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "typescript": "^3.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
